--- a/index.html
+++ b/index.html
@@ -4,8 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atividade 3</title>
+    <style>
+        #Cabecalho01{
+            text-decoration: none;
+            font-family: Arial, Helvetica, sans-serif;
+            list-style: none;
+        }
+
+    </style>
 </head>
 <body>
+    <main>
+        <nav id="Cabecalho01">
+            <ul>
+                <li>
+                    <a href="https://www.uol.com.br/">Uol</a>
+                    <a href="https://www.bol.uol.com.br/">Bol</a>
+                    <a href="https://www.globo.com/">Globo</a>
+                    <a href="https://br.yahoo.com/">Yahoo</a>
+                </li>
+            </ul>
+        </nav>
+
+    </main>
     
 </body>
 </html>
